# splice-model-benchmark

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
env/: dockerfile
golden_standard/: Snakefile  app.py  get_introns.py  get_introns_shannon.py  intron_file_paths.pkl  strandedness_notes.txt
golden_standard/config/: config.yaml
golden_standard/env/: Dockerfile  environment.yml
golden_standard/local/: config.yaml
golden_standard/rules/: download_file.smk  filter_introns.smk  get_all_longread_introns.smk  get_all_shortread_introns.smk  get_bam_stats.smk  get_forward_read_coverage.smk  get_introns.smk  get_reverse_read_coverage.smk
golden_standard/rules/scripts/: filter_introns.py  get_all_introns.py  get_bam_stats.py  get_forward_read_coverage.py  get_introns.py  get_reverse_read_coverage.py
golden_standard/slurm/: config.yaml
models/: pangolin.py  segmentnt.py  spliceai.py  sptransform.py
notebooks/: GRCh38_reference_update_to_GIABv3.ipynb  all_introns_df.ipynb  bam_file_script_prototype.ipynb  filter_introns_tab.ipynb  gene_case.ipynb  gopher_analysis.ipynb  joining_the_dataframes.ipynb  match_rna_seq_experiments.ipynb  stratified_prcurve.ipynb  test.ipynb  test_rule.ipynb
preprocess/: make_fasta.py
reference_files/SpliceTransformer/: tasks_annotate_mutations.py
