[project]
name = "splice-model-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "dm-haiku>=0.0.13",
    "gffutils>=0.13",
    "gtfparse>=2.5.0",
    "ipykernel>=6.29.5",
    "jax[cuda12-pip]>=0.4.35",
    "logomaker>=0.8.7",
    "matplotlib>=3.10.1",
    "natsort>=8.4.0",
    "nucleotide-transformer",
    "numpy<2",
    "pandas>=2.2.3",
    "pangolin",
    "polars>=0.20.31",
    "pybigwig>=0.3.24",
    "pyensembl>=2.3.13",
    "pyfaidx>=0.8.1.3",
    "pyvcf3>=1.0.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sinkhorn-transformer>=0.11.4",
    "spliceai>=1.3.1",
    "tensorflow[and-cuda]>=2.18.1",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
    "xarray>=2025.3.1",
    "zarr>=2.18.3",
]

[tool.uv.sources]
nucleotide-transformer = { git = "https://github.com/instadeepai/nucleotide-transformer", rev = "main" }
pangolin = { git = "https://github.com/tkzeng/Pangolin.git", rev = "main" }
